[gd_scene load_steps=4 format=2]

[ext_resource path="res://Project Reaper/Project Reaper/HEADS-export.png" type="Texture" id=1]
[ext_resource path="res://Body_Classes.tscn" type="PackedScene" id=2]
[ext_resource path="res://Charcust.gd" type="Script" id=3]

[node name="Charcust" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.607843, 0.192157, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_Body" type="Button" parent="."]
margin_left = -435.0
margin_top = 20.25
margin_right = -415.0
margin_bottom = 40.25
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( -216, -88.25 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right_Body" type="Button" parent="."]
margin_left = 89.0
margin_top = 21.25
margin_right = 109.0
margin_bottom = 41.25
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( -216, -88.25 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Sprite" parent="."]
position = Vector2( 505, 245 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
hframes = 32
vframes = 32

[node name="Body_Classes" parent="." instance=ExtResource( 2 )]

[node name="Left_Head" type="Button" parent="."]
margin_left = -435.0
margin_top = -83.75
margin_right = -415.0
margin_bottom = -63.75
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( -216, -88.25 )
text = "<"

[node name="Right_Head" type="Button" parent="."]
margin_left = 89.0
margin_top = -82.75
margin_right = 109.0
margin_bottom = -62.75
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( -216, -88.25 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head_Name" type="Label" parent="."]
margin_left = 484.0
margin_top = 156.0
margin_right = 524.0
margin_bottom = 170.0
grow_horizontal = 0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 18.8281, 6.5498 )
text = "Head"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class_Name" type="Label" parent="."]
margin_left = 484.0
margin_top = 452.0
margin_right = 524.0
margin_bottom = 466.0
grow_horizontal = 0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 18.8281, 6.5498 )
text = "Body"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 718.0
margin_top = 462.0
margin_right = 759.0
margin_bottom = 482.0
rect_scale = Vector2( 3, 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Left_Body" to="." method="_on_Left_Body_pressed"]
[connection signal="pressed" from="Right_Body" to="." method="_on_Right_Body_pressed"]
[connection signal="pressed" from="Left_Head" to="." method="_on_Left_Head_pressed"]
[connection signal="pressed" from="Right_Head" to="." method="_on_Right_Head_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
